# hirable

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
agent/: Dockerfile  bootstrap.py  pyproject.toml
agent/tests/: test_tools.py
agent/tools/: __init__.py  applications.py  client.py  context.py  documents.py  profile.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  files.py  main.py  schemas.py
backend/app/analytics/: service.py
backend/app/api/: admin.py  analytics.py  applications.py  auth.py  chat.py  documents.py  jobs.py  profile.py
backend/app/applications/: automation.py  scheduler.py  service.py  stages.py
backend/app/auth/: dependencies.py  password.py  sessions.py
backend/app/db/: engine.py  migrate.py  models.py  profile_history.py
backend/app/internal/: __init__.py  applications.py  context.py  deps.py  documents.py  profile.py  schemas.py
backend/app/llm/: client.py  deps.py  schemas.py
backend/app/parsing/: deps.py  extract.py  jobs.py  profile.py
backend/app/rendercv/: build.py  compile.py  letter.py  rules.py  service.py  tailor.py
backend/scripts/: README.md  seed_demo_data.py
backend/tests/: conftest.py  test_analytics.py  test_applications.py  test_auth.py  test_documents.py  test_internal.py  test_jobs.py  test_letter.py  test_profile.py  test_profile_versions.py  test_rendercv.py
config/: params.yaml
docs/: good_resume.md  rendercv.md
examples/: README.md  ai_researcher.yaml  computer_engineer.yaml  data_scientist.yaml  mle_engineer.yaml  render_pdfs.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/admin/: page.tsx
frontend/app/(app)/analytics/: page.tsx
frontend/app/(app)/applications/: page.tsx
frontend/app/(app)/chat/: page.tsx
frontend/app/(app)/jobs/: page.tsx
frontend/app/(app)/jobs/[id]/: page.tsx
frontend/app/(app)/profile/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: agent-panel.tsx  app-shell.tsx  application-status-card.tsx  cv-artifact.tsx  document-artifact.tsx
frontend/components/ui/: form.tsx  textarea.tsx
frontend/lib/: api.ts  auth.tsx
src/: config.py  graph.py  hirable_server.py  nodes.py  prompts.py  utils.py
src/agents/: ingest_job.py  ingest_resume.py
src/config/: __init__.py  rendercv_config.yaml
src/states/: __init__.py  cover_letter.py  job_desc.py  resume.py
src/utils/: __init__.py  export.py  export_resume.py  llm.py  parse.py
