[project]
name = "hirable-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agent_kit @ git+https://github.com/sharma-n/agent_kit",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]
