[project]
name = "hirable-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agent_kit @ git+https://github.com/sharma-n/agent_kit",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
