[project]
name = "hirable-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "argon2-cffi>=23.1",
    "apscheduler>=3.10",
    "trafilatura>=2.0",
    "docling>=2.0",
    "rendercv>=1.14",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "agent_kit @ git+https://github.com/sharma-n/agent_kit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
