[project]
name = "hirable-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agent-kit",
    "apscheduler>=3.11.3",
    "argon2-cffi>=25.1.0",
    "docling>=2.108.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "rendercv[full]>=2.8",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
agent-kit = { git = "https://github.com/sharma-n/agent_kit" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
